--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,15 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <input type="hidden" value="%NODE_ENV%" id="node_env_mode" />
+    <script>
+      var mode = document.querySelector("#node_env_mode").value;
+      if (
+        mode === "production" &&
+        typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === "object"
+      ) {
+        window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {};
+      }
+    </script>
   </body>
 </html>
