--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     <title>Brainspark</title>
 
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       body {
         margin: 0;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
