--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link 
-      rel="preload" as="style" media="print" onload="this.rel='stylesheet';this.media='all'"
+    rel="stylesheet" 
+    type="text/css"
+    media="print"
+    onload="this.media='all'" 
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&family=Roboto+Condensed:wght@400;700&display=swap">
 
     <title>Brainspark</title>
