fix: reduce speed load

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,18 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&family=Roboto+Condensed:wght@400;700&display=swap" as="style">
     <link 
     rel="stylesheet" 
     type="text/css"
     media="print"
     onload="this.media='all'" 
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&family=Roboto+Condensed:wght@400;700&display=swap">
-
+      <link rel=”dns-prefetch” href="https://brainspark-api.herokuapp.com">
+      <link rel="preconnect" href="https://brainspark-api.herokuapp.com">
+      
+      <link rel="preconnect" href="https://brainspark-cors.herokuapp.com">
+      <link rel="dns-prefetch" href="https://brainspark-cors.herokuapp.com">
     <title>Brainspark</title>
 
     <style>
